test/compilable/imports/a313templatemixin2.d
module imports.a313templatemixin2;
void bug()
{
}
