test/fail_compilation/fail4245c.d
// 4245
void fail4245()
{
    {
        struct Foo {}
    }
    {
        struct Foo {}
    }
}
